--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -22,6 +22,7 @@
     <None Remove="Employees\" />
     <None Remove="Employees\Commands\" />
     <None Remove="Employees\Commands\CreateEmployee\" />
+    <None Remove="Employees\Commands\LoginEmployee\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
@@ -35,6 +36,7 @@
     <Folder Include="Employees\" />
     <Folder Include="Employees\Commands\" />
     <Folder Include="Employees\Commands\CreateEmployee\" />
+    <Folder Include="Employees\Commands\LoginEmployee\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
