--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -28,6 +28,7 @@
     <None Remove="Connections\Commands\CreateConnection\" />
     <None Remove="Connections\Commands\UpdateConnection\" />
     <None Remove="Connections\Commands\DeleteConnection\" />
+    <None Remove="Employees\Commands\ConfirmEmployee\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
@@ -47,6 +48,7 @@
     <Folder Include="Connections\Commands\CreateConnection\" />
     <Folder Include="Connections\Commands\UpdateConnection\" />
     <Folder Include="Connections\Commands\DeleteConnection\" />
+    <Folder Include="Employees\Commands\ConfirmEmployee\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
