--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -33,6 +33,9 @@
     <None Remove="Employees\Commands\ChangePassword\" />
     <None Remove="Connections\Queries\" />
     <None Remove="Connections\Commands\AddUserConnection\" />
+    <None Remove="Posts\" />
+    <None Remove="Posts\Commands\" />
+    <None Remove="Posts\Commands\CreatePost\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
@@ -57,6 +60,9 @@
     <Folder Include="Employees\Commands\ChangePassword\" />
     <Folder Include="Connections\Queries\" />
     <Folder Include="Connections\Commands\AddUserConnection\" />
+    <Folder Include="Posts\" />
+    <Folder Include="Posts\Commands\" />
+    <Folder Include="Posts\Commands\CreatePost\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
