--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -37,6 +37,8 @@
     <None Remove="Posts\Commands\" />
     <None Remove="Posts\Commands\CreatePost\" />
     <None Remove="Dtos\PostDtos\" />
+    <None Remove="Posts\Commands\DeletePost\" />
+    <None Remove="Posts\Commands\UpdatePost\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Repositories\" />
@@ -65,6 +67,8 @@
     <Folder Include="Posts\Commands\" />
     <Folder Include="Posts\Commands\CreatePost\" />
     <Folder Include="Dtos\PostDtos\" />
+    <Folder Include="Posts\Commands\DeletePost\" />
+    <Folder Include="Posts\Commands\UpdatePost\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
